Electron-266 - Added z-index to make sure border is always on top

--- a/js/windowsTitleBar/style.css
+++ b/js/windowsTitleBar/style.css
@@ -94,5 +94,6 @@
     position: fixed;
     border-bottom: 1px solid #4a4a4a;
     width: 100%;
+    z-index: 3000;
     bottom: 0;
 }
